Updated formatting and display of time variables using moment()

--- a/views/author_list.pug
+++ b/views/author_list.pug
@@ -7,7 +7,8 @@ block content
   each author in author_list
     li 
       a(href=author.url) #{author.name} 
-      | ( #{author.lifespan})
+      if author.date_of_birth
+        | ( #{author.lifespan})
 
   else
      li There are no authors.
