--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,6 +33,9 @@ html(lang='en')
                 a(href='/catalog/book/create') Create new book
               li 
                 a(href='/catalog/bookinstance/create') Create new book instance (copy)
+                hr
+              li 
+                a(href='https://github.com/yonlugoh/local_library') Yon-lu's Github
                 
         div(class='col-sm-10')
           block content
