--- a/views/index.pug
+++ b/views/index.pug
@@ -4,6 +4,8 @@ block content
   h1= title
   p Welcome to #[em LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
 
+  p A link to Yon-lu's GitHub is also displayed on the bottom left corner.
+
   h1 Dynamic content
 
   if error
