--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,6 +36,7 @@ html(lang='en')
                 hr
               li 
                 a(href='https://github.com/yonlugoh/local_library') Yon-lu's Github
-                
+              li
+                a(href='https://developer.mozilla.org/en-US/docs/Learn/Server-side/Express_Nodejs/Tutorial_local_library_website') Mozilla Tutorial
         div(class='col-sm-10')
           block content
