--- a/views/author_detail.pug
+++ b/views/author_detail.pug
@@ -3,18 +3,21 @@ extends layout
 block content
 
   h1 Author: #{author.name}
-  if author.date_of_birth
-     p #{author.lifespan}
+  p #{author.lifespan}
   
   div(style='margin-left:20px;margin-top:20px')
 
     h4 Books
     
     dl
-      each book in author_books
-        dt 
-          a(href=book.url) #{book.title}
-        dd #{book.summary}
+    each book in author_books
+      dt 
+        a(href=book.url) #{book.title}
+      dd #{book.summary}
 
-      else
-        p This author has no books.
+    else
+      p This author has no books.
+      
+  hr
+  p
+    a(href=author.url+'/delete') Delete author
