--- a/views/layout.pug
+++ b/views/layout.pug
@@ -13,7 +13,7 @@ html(lang='en')
       div(class='row')
         div(class='col-sm-2')
           block sidebar
-            ul(class='sidebar-nav')
+            ul(class='sidebar-nav' , id='sidebar')
               li 
                 a(href='/catalog') Home
               li 
