--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,17 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  background-image: linear-gradient(90deg, #E3FDF5 0%, #FFE6FA 80%);
+  background-repeat: repeat;
+  background-size: auto;
+  
 }
+sidebar{
 
+  background: #white;
+
+}
 a {
   color: #00B7FF;
 }
+
