--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,6 +14,10 @@ body {
 
 }
 
+hr {
+border-color: black!important;
+}
+
 .row {
     background: rgba(255, 255, 255, 0.83);
     overflow-x: show;
