--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,8 +2,8 @@ body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background: #12c2e9;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #f64f59, #c471ed, #12c2e9);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #f64f59, #c471ed, #12c2e9); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: -webkit-linear-gradient(to right, rgba(246,79,89, 0.8), rgba(196,113,237, 0.8), rgba(18,194,233, 0.8));  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, rgba(246,79,89, 0.8), rgba(196,113,237, 0.8), rgba(18,194,233, 0.6)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
   
 }
