--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,39 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: #12c2e9;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, rgba(246,79,89, 0.8), rgba(196,113,237, 0.8), rgba(18,194,233, 0.8));  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, rgba(246,79,89, 0.8), rgba(196,113,237, 0.8), rgba(18,194,233, 0.6)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+ background: linear-gradient(270deg, #f64f59, #c471ed, #12c2e9, #c471ed);
+background-size: 800% 800%;
 
-  
+-webkit-animation: AnimationName 20s ease infinite;
+-moz-animation: AnimationName 20s ease infinite;
+animation: AnimationName 20s ease infinite;
+
+
+  /*
+  background: #12c2e9;  
+  background: -webkit-linear-gradient(to right, rgba(246,79,89, 0.8), rgba(196,113,237, 0.8), rgba(18,194,233, 0.8));
+  background: linear-gradient(to right, rgba(246,79,89, 0.8), rgba(196,113,237, 0.8), rgba(18,194,233, 0.6)); 
+  */
 }
+
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+
+
+
 
 .col-sm-2 {
 
