--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,7 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
- background: linear-gradient(270deg, #f64f59, #c471ed, #12c2e9, #c471ed);
+ background: linear-gradient(270deg, rgba(246,79,89, 0.8), rgba(196,113,237, 0.8), rgba(18,194,233, 0.8) , rgba(196,113,237, 0.8) );
 background-size: 800% 800%;
 
 -webkit-animation: AnimationName 20s ease infinite;
